--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
-    <title>PAM Media</title>
+    <title>Booking Hotel</title>
   </head>
 
   <body>
