--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-
+    <link
+    rel="icon"
+    type="image/svg+xml"
+    href="./src/images/Frame 1321318034.png"
+  />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -33,12 +37,12 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
-    <title>Booking Hotel</title>
+    <title>Hotel Booking</title>
   </head>
 
   <body>
     <div id="root"></div>
-   
+
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
